--- a/sim/templates/home.html
+++ b/sim/templates/home.html
@@ -3,7 +3,7 @@
 
 {% block konten %}
 <div class="jumbotron">
-    <h1 class="display-4">welcome to website marwani</h1>
+    <h1 class="display-4">welcome to website rahmawani</h1>
     <p class="lead">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora rem error, dolores iure ad itaque
         enim nam veniam quasi perferendis sunt tempore vel! Enim beatae, ratione voluptas illo maiores aspernatur!</p>
     <br>
